--- a/src/pages/eula/eula.scss
+++ b/src/pages/eula/eula.scss
@@ -3,4 +3,7 @@ page-eula {
         text-align: center;
         transform: translateX(-12px)
     }
+    .backBtn{
+        font-size: 26px;
+    }
 }
