--- a/src/pages/forgot-password/forgot-password.scss
+++ b/src/pages/forgot-password/forgot-password.scss
@@ -1,4 +1,12 @@
 page-forgot-password {
+    .container{
+        background: linear-gradient(rgba(1, 17, 39, 0.562),rgba(1, 17, 39, 0.9)),
+        url('../../assets/imgs/BG.jpg')
+        ;
+        background-position: bottom;
+        // background-size:cover;
+        
+    }
     .theForm{
         width: 100%;
         max-width: 500px;
@@ -6,17 +14,25 @@ page-forgot-password {
         margin: 0 auto;
         padding-top: 50%;
     }
+
     .contents{
-        background: white;
-        box-shadow:  0 0px 15px grey;
+        background: rgba(255, 255, 255, 0.082);
+        box-shadow:  0 0px 15px rgba(0, 0, 0, 0.479);
         padding: 10px;
         border-radius: 5px;
         animation: 1.2s bounceInUp;
         transition: 1s;
+        color: white;
     }
+
     .theTXT{
-        border: 1px solid grey;
+        // border: 1px solid grey;
         border-radius: 5px;
+        border-bottom: 2px solid rgb(250,179,53);
+        color: rgb(250,179,53);
         padding-left: 10px;
+    }
+    .theTXT::placeholder{
+        color: red
     }
 }
