--- a/src/pages/forgot-password/forgot-password.scss
+++ b/src/pages/forgot-password/forgot-password.scss
@@ -35,4 +35,9 @@ page-forgot-password {
     .theTXT::placeholder{
         color: red
     }
+    
+    .helptext{
+        color: red;
+        font-weight: bold
+    }
 }
