--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -81,5 +81,12 @@ page-login {
         text-align: center;
         color: white
     }
+    .helptext{
+        color: red;
+        font-weight: bold
+    }
+    #eye{
+        padding-left: 10px;
+    }
 }
 
