--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -83,4 +83,8 @@ page-signup {
         // position: absolute;
         padding-left: 20px;
     }
+    .helptext{
+        color: red;
+        font-weight: bold
+    }
 }
