--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,5 @@
 // http://ionicframework.com/docs/theming/
 
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -14,3 +13,25 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.myAlert {
+  animation: 0.7s bounceIn;
+  color: #eaf0f1;
+
+  button {
+    color: color($colors, primary, base);
+    width: 50%;
+    //   border: 1px solid color($colors, primary, base);
+    margin: 0 auto;
+  }
+  .alert-message {
+    color: white; // text color for confirm alerts
+  }
+  .alert-wrapper {
+    background-color: color($colors, secAlert, base); // bg color of alert content
+    border-radius: 10px;
+  }
+}
+
+.myAlert1 {
+}
