--- a/src/pages/view/view.html
+++ b/src/pages/view/view.html
@@ -88,10 +88,11 @@
   <ion-toolbar>
     <ion-row>
       <ion-col col-10>
-        <ion-input type="text" [(ngModel)]="comment" placeholder="Comment" id="commentTXT"></ion-input>
+        <ion-input type="text" [(ngModel)]="comment" placeholder="Comment" (ionChange)="enable($event)" id="commentTXT"></ion-input>
       </ion-col>
       <ion-col col-2 class="centerIt">
-        <button ion-button class="sendBtn" item-end icon-only large (click)="CommentPic(numComments)">
+        <div class="overlay"></div>
+        <button ion-button class="sendBtn" item-end icon-only large (click)="CommentPic(numComments)" >
           <ion-icon name="send"></ion-icon>
         </button>
       </ion-col>
