--- a/src/pages/view/view.scss
+++ b/src/pages/view/view.scss
@@ -295,4 +295,14 @@ page-view {
             height: 750px;
         }
     }
+
+    .overlay{
+        background: rgba(255, 255, 255, 0.247);
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        display: block;
+        z-index: 1000000000000000000000000000000000000000000000000;
+        transition: 700ms;
+    }
 }
