--- a/src/pages/forgot-password/forgot-password.scss
+++ b/src/pages/forgot-password/forgot-password.scss
@@ -13,16 +13,22 @@ page-forgot-password {
         text-align: center;
         margin: 0 auto;
         padding-top: 50%;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
     .contents{
         background: rgba(255, 255, 255, 0.082);
         box-shadow:  0 0px 15px rgba(0, 0, 0, 0.479);
-        padding: 10px;
+        padding: 20px;
         border-radius: 5px;
         animation: 1.2s bounceInUp;
         transition: 1s;
         color: white;
+        button{
+            color: color($colors, secondary, base);
+            text-transform: capitalize;
+        }
     }
 
     .theTXT{
@@ -39,5 +45,26 @@ page-forgot-password {
     .helptext{
         color: red;
         font-weight: bold
+    }
+    form{
+        // width:90%;
+    }
+    ion-title{
+        position: absolute;
+        top: 15px;
+        left:50%;
+        transform: translateX(-50%) 
+    }
+    
+    // ion-input{
+    //     width: 85%;
+    //     margin: 0 auto;
+    // }
+    .logo{
+        height: 0px;
+        img{
+            height: 120px;
+            // position: absolute;
+        }
     }
 }
