--- a/src/pages/eula/eula.scss
+++ b/src/pages/eula/eula.scss
@@ -1,7 +1,12 @@
 page-eula {
     .Ts{
-        text-align: center;
-        transform: translateX(-12px)
+        // text-align: center;
+        position: absolute;
+        top: 5px;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 16px;
+        font-weight: bold;
     }
     .backBtn{
         font-size: 20px;
