--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,7 @@
+<div *ngIf="showSplash" class="splash">
+    <div class="spinner">
+        <div class="dot1"></div>
+  <div class="dot2"></div>
+    </div>
+</div>
 <ion-nav [root]="rootPage"></ion-nav>
