--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,10 @@
 <div *ngIf="showSplash" class="splash">
-    <div class="sk-folding-cube">
+    <!-- <div class="sk-folding-cube">
         <div class="sk-cube1 sk-cube"></div>
         <div class="sk-cube2 sk-cube"></div>
         <div class="sk-cube4 sk-cube"></div>
         <div class="sk-cube3 sk-cube"></div>
-      </div>
+      </div> -->
+      <img src="../assets/imgs/anim/icon.png" class="spinner" alt="">
 </div>
 <ion-nav [root]="rootPage"></ion-nav>
